# rwfury

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
dffapi/: __init__.py  txd.py
rwfury/: FIX_BINMESH_GENERIC_MESHES.md  __init__.py  col.py  col_materials.py  dff.py  generic_mesh.py  ifp.py  img.py  paths.py  rwbinary.py  txd.py
rwfury/dff_parts/: __init__.py  api.py  mesh_export.py  models.py  read_geometry.py  read_material.py  read_scene.py  reader.py  writer.py
