[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rwfury"
version = "0.1.0"
description = "Python library for reading and writing GTA RenderWare DFF and TXD files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Hancapo" },
]
keywords = ["gta", "renderware", "dff", "txd", "san-andreas", "vice-city", "gta3"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]

[project.urls]
Homepage = "https://github.com/Hancapo/rwfury"
Repository = "https://github.com/Hancapo/rwfury"

[tool.setuptools.packages.find]
include = ["rwfury*"]
